# project_f

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Camera.cpp.DEC3785D9AE1FF21.idx  Camera.h.33603212909B1710.idx  GPIO.cpp.491A42C2E0F88A9B.idx  GPIO.h.7C0D0C276069AE6E.idx  ImageProcessor.cpp.B247D05B4A4B5283.idx  ImageProcessor.h.661FDF6805ED9668.idx  PIDController.cpp.6D8FABE3A5F6B211.idx  PIDController.h.7C1FB06F482C6BF7.idx  RobotSystem.cpp.3429D6CC759DF2A7.idx  RobotSystem.h.CE7FD54DED3DB05D.idx  SerialCommunicator.cpp.6FAA03485C53CCCA.idx  SerialCommunicator.h.8502634112BE2D4E.idx  TaskExecutor.cpp.31452DAEBA9A4FDD.idx  TaskExecutor.h.A229E7BCB5D6C6A7.idx  TemplateMatcher.cpp.867B4A17FEB038B8.idx  TemplateMatcher.h.2BDB4D6EEA86D6E7.idx  UltrasonicSensor.cpp.95DE4B073150FB3F.idx  UltrasonicSensor.h.CEE967E342DAAD61.idx  main.cpp.90AA096BBD3CAC68.idx
Week 5/: LED relay.cpp  audio amplifier.cpp  ultrasonic sensor.cpp
include/: Camera.h  GPIO.h  HMI.h  ImageProcessor.h  PIDController.h  RobotSystem.h  SerialCommunicator.h  TaskExecutor.h  TemplateMatcher.h  UltrasonicSensor.h
src/: Camera.cpp  HMI.cpp  ImageProcessor.cpp  RobotSystem.cpp  TaskExecutor.cpp  TemplateMatcher.cpp  main.cpp
